# mx-ping-pong-sc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: actions.yml
ping-pong/: .gitignore  Cargo.toml  erdpy.json  mxpy.json  sc-config.toml
ping-pong/abi/: Cargo.toml
ping-pong/abi/src/: main.rs
ping-pong/interaction/: .snippets.sh.swp  Ping-pong.erdjs.md  snippets.sh
ping-pong/interactor/: .gitignore  Cargo.toml  state.toml
ping-pong/interactor/src/: interact.rs  interact_cli.rs  interact_config.rs  interact_main.rs  interact_state.rs  ping_pong_proxy.rs
ping-pong/interactor/tests/: interact_cs_test.rs  interact_cs_tests.rs
ping-pong/mandos/: ping-pong-call-ping-after-deadline.scen.json  ping-pong-call-ping-before-activation.scen.json  ping-pong-call-ping-before-beginning.scen.json  ping-pong-call-ping-second-user.scen.json  ping-pong-call-ping-twice.scen.json  ping-pong-call-ping-wrong-ammount.scen.json  ping-pong-call-ping-wrong-amount.scen.json  ping-pong-call-ping.scen.json  ping-pong-call-pong-all-after-pong.scen.json  ping-pong-call-pong-all-interrupted-1.scen.json  ping-pong-call-pong-all-interrupted-2.scen.json  ping-pong-call-pong-all.steps.json  ping-pong-call-pong-before-deadline.scen.json  ping-pong-call-pong-twice.scen.json  ping-pong-call-pong-without-ping.scen.json  ping-pong-call-pong.scen.json  ping-pong-init.scen.json
ping-pong/meta/: Cargo.toml
ping-pong/meta/src/: main.rs
ping-pong/scenarios/: ping-pong-call-ping-after-deadline.scen.json  ping-pong-call-ping-before-activation.scen.json  ping-pong-call-ping-before-beginning.scen.json  ping-pong-call-ping-second-user.scen.json  ping-pong-call-ping-twice.scen.json  ping-pong-call-ping-wrong-ammount.scen.json  ping-pong-call-ping-wrong-amount.scen.json  ping-pong-call-ping.scen.json  ping-pong-call-pong-all-after-pong.scen.json  ping-pong-call-pong-all-interrupted-1.scen.json  ping-pong-call-pong-all-interrupted-2.scen.json  ping-pong-call-pong-all.steps.json  ping-pong-call-pong-before-deadline.scen.json  ping-pong-call-pong-without-ping.scen.json  ping-pong-call-pong.scen.json  ping-pong-init.scen.json
ping-pong/src/: ping_pong.rs  proxy_ping_pong_egld.rs
ping-pong/tests/: ping_pong_egld_mandos_go_test.rs  ping_pong_egld_mandos_rs_test.rs  ping_pong_egld_scenario_go_test.rs  ping_pong_egld_scenario_rs_test.rs
ping-pong/wasm/: Cargo.toml
ping-pong/wasm/src/: lib.rs
