[package]
name = "ping-pong-interact"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[[bin]]
name = "ping-pong-interact"
path = "src/interact_main.rs"

[lib]
path = "src/interact.rs"

[dependencies.ping-pong]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.54.6"

[dependencies.multiversx-sc]
version = "0.54.6"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.6"
tokio = { version = "1.24" }

[features]
chain-simulator-tests = []
