[package]
name = "ping-pong-meta"
version = "0.0.0"
authors = ["Bruda Claudiu-Marcel <claudiu725@yahoo.com>"]
edition = "2021"
publish = false

[dependencies.ping-pong]
path = ".."

[dependencies.multiversx-sc-meta-lib]
version = "=0.54.6"
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "51791cb3c23f8084e97c5ef0af82a9d16ab70cb9"
