[package]
name = "ping-pong-wasm"
version = "0.0.1"
authors = [ "Bruda Claudiu-Marcel <claudiu725@yahoo.com>",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.ping-pong]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.29.3"

[dependencies.elrond-wasm-output]
version = "0.29.3"
features = ["wasm-output-mode"]
